--- a/test/sim_env.conf
+++ b/test/sim_env.conf
@@ -90,7 +90,7 @@ ioThread.dataOutputFormat = json        # 数据输出格式 (json, binary, none
 [log]
 log.root_category = DEBUG, console_log
 log.mode=file
-log.threshold=TRACE
+log.threshold=INFO
 log.file=./${LOG_SYSTEM_NAME}.log
 log.file.max_file_length=300
 log.file.max_backup_index=3
